fix: probando reverse

--- a/Proyecto2024/index.html
+++ b/Proyecto2024/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ALTEN</title>
-    <link rel="stylesheet" href="" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="">
+</head>
+<body>
     <h1 class="manolo">LOS CUATRO FANTÁSTICOS</h1>
-
+    
     <header class="jorgito"></header>
 
     <main class="cuerpo">
-      <div class="mr.andres"></div>
-      <div class="aaronboss"></div>
+        <div class="mr.andres"></div>
+        <div class="aaronboss"></div>
     </main>
 
-    <footer class="juan-carlos"></footer>
-  </body>
+    <footer class="juanca"></footer>
+</body>
 </html>
